--- a/visualization.html
+++ b/visualization.html
@@ -257,7 +257,7 @@
               .append("g")
                 .attr("transform", `translate(${margin.left},${margin.top})`);
             const x = d3.scaleLinear()
-                .domain([0, data.length - 1])
+                .domain([0, 80])  // 设置最大刻度为80岁
                 .range([0, width]);
             const y = d3.scaleLinear()
                 .domain([0, d3.max(data, d => d)]).nice()
