--- a/visualization.html
+++ b/visualization.html
@@ -265,7 +265,7 @@
             svg.append("g")
                 .attr("class", "axis")
                 .attr("transform", `translate(0,${height})`)
-                .call(d3.axisBottom(x).tickFormat(d => `${d+1}周期`));
+                .call(d3.axisBottom(x).tickFormat(d => `${d}岁`));
             svg.append("g")
                 .attr("class", "axis")
                 .call(d3.axisLeft(y).tickFormat(d => `${d}意义值`));
